keycloak_magicbackup/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minimal-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: localhost
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: keycloak-service
                port:
                  number: 10001
    - host: mylocalhost
      http:
        paths:
          - pathType: Prefix
            path: "/httpd"
            backend:
              service:
                name: httpd-service
                port:
                  number: 8081
          - pathType: Prefix
            path: "/oauth"
            backend:
              service:
                name: oauth-service
                port:
                  number: 4180
